--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -14,3 +14,11 @@ html, body, #app {
 .el-card {
     box-shadow: 0 1px 1px rgba(0, 0, 0, .15) !important;
 }
+
+.el-steps {
+    margin: 15px 0;
+}
+
+.el-step__title {
+    font-size: 13px;
+}
